# terpine

./: .gitignore  CycleWrap.xpr  EthTest.xpr  Terpine.xpr  UltraWrap.xpr  Ultrapine.xpr  block.sv  block_test.sv  block_test_behav.wcfg  block_wrap.sv  block_wrap.tcl  block_wrap.xdc  control.sv  core.vhd  core_test.vhd  cycle.sv  cycle.vhd  cycle.xise  cycle_test.sv  cycle_test.vhd  cycle_test.wcfg  cycle_test_behav.wcfg  cycle_wrap.sv  cycle_wrap.tcl  cycle_wrap.xdc  defs.vhd  delay.vhd  eth_test.sv  eth_test_out.mem  gear32_20.sv  gear_test.sv  mii_fcs.sv  mii_fcs_test.sv  mii_fcs_test_behav.wcfg  phase.vhd  pinout.xdc  quad.sv  quad.vhd  quad_test.sv  quad_test.vhd  (+22 more)
Terpine.srcs/constrs_1/new/: clock_wrap.xdc
linear/: core.vhd  core_test.vhd  defs.vhd  delay.vhd  expand12.vhd  expand12b.vhd  line.vhd  round.vhd  terpine.xise  wrap.ucf  wrap.vhd
soft/: cheat.cpp  check.cpp  check.h  check80.cpp  database.cpp  database.h  db.sql  db_check.cpp  dump.cpp  ethsum.c  extract.cpp  fifo.cpp  fifo.h  meson.build  model.cpp  model.h  packet.cpp  packet.h  ping_board.cpp  record.cpp  req.c  run_check.cpp  server.cpp  server.h  sha1test.c  single.cpp  start.cpp
